# mind-palace

./: pyproject.toml
mind_palace/: __main__.py
tests/: test_mind_palace.py
