[tool.poetry]
name = "mind-palace"
version = "0.1.0"
description = "Note management application"
authors = ["Jerven Clark Chua <jervenclark@gmail.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/jervenclark/mind-palace"
repository = "https://github.com/jervenclark/mind-palace"
keywords = ["zettelkasten", "notes", "note management"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"

[tool.poetry.scripts]
mind-palace = 'mind_palace:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
